tests/fail/trait_bounds_auto.stderr
error[E0422]: Type mismatch for member '*ptr': expected '*i32', but got 'null'
 --> tests/fail/trait_bounds_auto.tk:15:20
   |
 15 |     auto ^u2 = new UnsafeData(value=0, *ptr=null)
   |                    ^
error[E0606]: Type 'UnsafeData' does not satisfy trait bound '@Send' for generic parameter 'T'
 --> tests/fail/trait_bounds_auto.tk:16:5
   |
 16 |     process_send<UnsafeData>(u2)
   |     ^
error[E0421]: Member access 'ptr' on non-shape type 'i64'
 --> tests/fail/trait_bounds_auto.tk:8:82
  |
 8 |     pub fn clone(&self) -> ^UnsafeData { return new UnsafeData(value=0, *ptr=self.ptr) }
  |                                                                                  ^
